This time, fixed the Project Loading error for real

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=FastTrack_Workshop_1
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-TransitionMap=
+EditorStartupMap=/Game/ThirdPersonBP/Maps/FastTrack_Workshop_1.FastTrack_Workshop_1
+GameDefaultMap=/Game/ThirdPersonBP/Maps/FastTrack_Workshop_1.FastTrack_Workshop_1
+TransitionMap=/Game/ThirdPersonBP/Maps/FastTrack_Workshop_1.FastTrack_Workshop_1
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+ServerDefaultMap=/Game/ThirdPersonBP/Maps/FastTrack_Workshop_1.FastTrack_Workshop_1
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
@@ -23,5 +24,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-
